--- a/scss/_formulario.scss
+++ b/scss/_formulario.scss
@@ -1,9 +1,13 @@
 .formulario{
     display: block;
-    margin-bottom: 10px;
+    margin: 10px;
+    
 }
 
 .areatexto{
     width: auto;
 }
 
+.form-label{
+    font-size: 15px;
+}
