--- a/scss/_mediaq.scss
+++ b/scss/_mediaq.scss
@@ -39,7 +39,9 @@
         grid-template-columns: auto auto;
         grid-template-rows: 1fr 1fr;
 }
-    
+.compras{
+    width: 500px;
+    }
     
     .encabezado {
         display: flex;
@@ -62,6 +64,11 @@
     .wikiInfo{
         width: 900px;
     }
+    }
+
+    .formulario  {
+        margin-left: 150px;
+        margin-right: 150px;
     }
     }
 
