--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -7,6 +7,7 @@ footer{
     text-align: center;
     justify-content: space-between;
     padding-top: 1px;
+    padding-bottom: 5px;
     a {
     font-size: 1.5em;
     margin-right: 10px;
